// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple-routes build and serve should generate the expected files 1`] = `
{
  "917-4ce142249e17336dc20c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "AsyncComponent-fa5a73565b867163c66a.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Details-065db15fad163b0a609f.css": .EOTSBbL {
  color: blue;
}
,
  "handlers-Details-b6c9cbc47e1cad95e83d.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "handlers-Home-0076e4d4a98910c8f902.css": .dyLY_sb {
  color: red;
}
,
  "handlers-Home-d2ccd73d95076899f64c.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main-f4e15b060043ff3a5f55.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "production/au/details/$id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-0ba135681dc227ae6b96.js",
    "/static/place/917-4ce142249e17336dc20c.js",
    "/static/place/main-f4e15b060043ff3a5f55.js",
    "/static/place/handlers-Details-b6c9cbc47e1cad95e83d.js",
    "/static/place/AsyncComponent-fa5a73565b867163c66a.js",
  ]
CSS: [
    "/static/place/handlers-Details-065db15fad163b0a609f.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="EOTSBbL">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [247,100]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/au/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-0ba135681dc227ae6b96.js",
    "/static/place/917-4ce142249e17336dc20c.js",
    "/static/place/main-f4e15b060043ff3a5f55.js",
    "/static/place/handlers-Home-d2ccd73d95076899f64c.js",
  ]
CSS: [
    "/static/place/handlers-Home-0076e4d4a98910c8f902.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="dyLY_sb">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [507]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/details/:id/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-0ba135681dc227ae6b96.js",
    "/static/place/917-4ce142249e17336dc20c.js",
    "/static/place/main-f4e15b060043ff3a5f55.js",
    "/static/place/handlers-Details-b6c9cbc47e1cad95e83d.js",
    "/static/place/AsyncComponent-fa5a73565b867163c66a.js",
  ]
CSS: [
    "/static/place/handlers-Details-065db15fad163b0a609f.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="EOTSBbL">
        Welcome to the Details page - nz
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [247,100]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>,
  "production/nz/nz/index.html": SCRIPTS: [
    "https://code.jquery.com/jquery-3.5.0.slim.min.js",
    "/static/place/runtime-0ba135681dc227ae6b96.js",
    "/static/place/917-4ce142249e17336dc20c.js",
    "/static/place/main-f4e15b060043ff3a5f55.js",
    "/static/place/handlers-Home-d2ccd73d95076899f64c.js",
  ]
CSS: [
    "/static/place/handlers-Home-0076e4d4a98910c8f902.css",
  ]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="dyLY_sb">
        Welcome to the Home page - nz
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"nz"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [507]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>,
  "runtime-0ba135681dc227ae6b96.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`multiple-routes build and serve should return details page 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-0ba135681dc227ae6b96.js",
  "/static/place/917-4ce142249e17336dc20c.js",
  "/static/place/main-f4e15b060043ff3a5f55.js",
  "/static/place/handlers-Details-b6c9cbc47e1cad95e83d.js",
  "/static/place/AsyncComponent-fa5a73565b867163c66a.js",
]
CSS: [
  "/static/place/handlers-Details-065db15fad163b0a609f.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="EOTSBbL">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [247,100]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="EOTSBbL">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes build and serve should return home page 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/static/place/runtime-0ba135681dc227ae6b96.js",
  "/static/place/917-4ce142249e17336dc20c.js",
  "/static/place/main-f4e15b060043ff3a5f55.js",
  "/static/place/handlers-Home-d2ccd73d95076899f64c.js",
]
CSS: [
  "/static/place/handlers-Home-0076e4d4a98910c8f902.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="dyLY_sb">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      [507]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;

exports[`multiple-routes start should render details page correctly 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors-node_modules_pnpm_loadable_component_5_15_3_react_18_2_0_node_modules_loadable_compon-5a444e.js",
  "/main.js",
  "/handlers-Details.js",
  "/AsyncComponent.js",
]
CSS: [
  "/handlers-Details.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Details"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Details"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
    <link
      data-chunk="AsyncComponent"
      rel="preload"
      as="script"
      href="scripts[5]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Details__root___EOTSBbL">
        Welcome to the Details page - au
        <span>
          Some special async content
        </span>
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      ["handlers-Details","AsyncComponent"]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Details","AsyncComponent"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Details"
      src="scripts[4]"
    >
    </script>
    <script
      async
      data-chunk="AsyncComponent"
      src="scripts[5]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: 
   <body>
     <div id="app">
       <h1 class="Details__root___EOTSBbL">
-        Welcome to the Details page - au
+        Welcome to the Details page - auID: 123
         <span>
           Some special async content
         </span>

`;

exports[`multiple-routes start should render home page correctly 1`] = `
SCRIPTS: [
  "https://code.jquery.com/jquery-3.5.0.slim.min.js",
  "/runtime.js",
  "/vendors-node_modules_pnpm_loadable_component_5_15_3_react_18_2_0_node_modules_loadable_compon-5a444e.js",
  "/main.js",
  "/handlers-Home.js",
]
CSS: [
  "/handlers-Home.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta
      http-equiv="Content-Security-Policy"
      content="script-src 'self' https://error-tracking.com https://fb-tracking.com https://code.jquery.com 'sha256-rGv16tw6EM5EMe4gsxdgzpqzrzd14bhfa2neQclOXDU=' 'unsafe-eval';"
    >
    <meta charset="UTF-8">
    <title>
      hello-world
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script src="scripts[0]">
    </script>
    <script>
      console.log('Hi');
    </script>
    <style type="text/css">
      body {
        background: pink;
      }
    </style>
    <link
      data-chunk="handlers-Home"
      rel="stylesheet"
      href="styles[0]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[1]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[2]"
    >
    <link
      data-chunk="main"
      rel="preload"
      as="script"
      href="scripts[3]"
    >
    <link
      data-chunk="handlers-Home"
      rel="preload"
      as="script"
      href="scripts[4]"
    >
  </head>
  <body>
    <div id="app">
      <h1 class="Home__root___dyLY_sb">
        Welcome to the Home page - au
      </h1>
    </div>
    <script
      id="__SKU_CLIENT_CONTEXT__"
      type="application/json"
    >
      {"site":"au"}
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS__"
      type="application/json"
    >
      ["handlers-Home"]
    </script>
    <script
      id="__LOADABLE_REQUIRED_CHUNKS___ext"
      type="application/json"
    >
      {"namedChunks":["handlers-Home"]}
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[1]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[2]"
    >
    </script>
    <script
      async
      data-chunk="main"
      src="scripts[3]"
    >
    </script>
    <script
      async
      data-chunk="handlers-Home"
      src="scripts[4]"
    >
    </script>
  </body>
</html>
POST HYDRATE DIFFS: NO DIFF
`;
